--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,8 +1,58 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <!-- Add Code Here -->
-    </body>
+  <head>
+    <title>My Profile</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Fuzzy+Bubbles:wght@400;700&family=Roboto:ital@0;1&family=Shadows+Into+Light&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Add Code Here -->
+    <div class="page-grid">
+      <center>
+        <div>
+          <img class="cat" src="kitkat.jpg" alt="kitkat_image" />
+          <iframe
+            class="google_map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510562.3141646376!2d103.51459858341687!3d1.3146648984698812!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da11238a8b9375%3A0x887869cf52abf5c4!2sSingapore!5e0!3m2!1sen!2ssg!4v1685258151695!5m2!1sen!2ssg"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+      </center>
+      <div>
+        <h1>Hi, I'm Hafizah</h1>
+        <h2>&hearts; About myself &hearts;</h2>
+        <p>
+          My full name is Nurulhafizah Haron, please just call me Hafizah. I
+          know my full name can be mouth-full. Born and raised in Singapore.
+        </p>
+        <p>
+          I am an aspiring software engineer. I used to be a freelance tutor
+          where I specialise as a Mathematics teacher for 12 years. Graduated
+          with BSc in Mathematical Science, Specialise in Applied Mathematics
+          and Minor in Computing at Nanyang Technological University (NTU). I
+          love to code, creating and learning new things and skills.
+        </p>
+        <h2>&hearts; What I do on my free time? &hearts;</h2>
+        <ul>
+          <li>Bullet Journaling</li>
+          <li>Taking care of my cats</li>
+          <li>Just started on reading more books</li>
+          <li>Watching movies and TV series</li>
+        </ul>
+        <h2>&hearts; Where you can find my portfolio? &hearts;</h2>
+        <a href="https://github.com/nurulhafizahharon" target="_blank"
+          ><button class="github-button">View Project on GitHub</button></a
+        >
+      </div>
+    </div>
+  </body>
 </html>
